update for Ubuntu-24.04&Java17